data/derived/sp14/progs/unify/prog0231.ml.out
Characters 170-203:
  in helper (mulByDigit i (List.rev t) * 10 ) + h*i;;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
